fix contraste de la présentation sur la page principale

--- a/2022/assets/css/main.css
+++ b/2022/assets/css/main.css
@@ -268,6 +268,11 @@ footer img::-moz-selection,
     padding: 3em;
     border-radius: 0;
     text-align: center;
+    color: var(--primary-dark);
+}
+
+.presentation a {
+    color: var(--primary-dark);
 }
 
 .presentation .card-title {
